<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation_list">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sing_in"
            android:fontFamily="@font/machine_bt"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/ed_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="#fff"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textColorHint="@color/colorAccent" />
        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#fff"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="@color/colorAccent" />
        <Button
            android:id="@+id/buttonSingIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#fff"
            android:fontFamily="@font/universe_black"
            android:text="@string/sing_in"
            android:textAllCaps="false"
            android:textColor="#000" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/cpb"
        android:indeterminateDuration="@integer/config_navAnimTime"
        android:layout_marginTop="30dp"
        android:progressTint="@color/card_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1" />
</androidx.constraintlayout.widget.ConstraintLayout>