<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_height="213dp">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@drawable/background_yellow"
        tools:targetApi="lollipop" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:textSize="28sp"
            android:text="Andrei Utko"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="age :"
                        android:textColor="@color/card_color"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/text_age"
                        android:textSize="15sp"
                        android:text="20"
                        android:textColor="#fff"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_marginStart="80dp"
                android:elevation="10dp"
                android:src="@drawable/ic_gear_stick"
                android:layout_height="80dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/district"
                android:textSize="15sp"
                android:textColor="@color/card_color"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_district"
                android:textSize="15sp"
                android:textColor="#fff"
                android:text="Malinauka"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <TextView
                android:text="@string/phone_number"
                android:textColor="@color/card_color"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_phone_number"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:text="+375298879900"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/card_color"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:textColor="#fff"
                android:text="Andrewduck1365@gmail.com"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>